Fixing menu on mobile

--- a/sass/03-components/_02-navigation.scss
+++ b/sass/03-components/_02-navigation.scss
@@ -5,7 +5,7 @@
 	justify-content: flex-end;
 	margin: 0;
 	.menu{
-		display:flex;
+		display:flex !important;
 		flex-flow: column nowrap;
 		justify-content: flex-start;
 		align-items: flex-start;
